# begentle

./: LICENSE  README.rst  pyproject.toml
.github/workflows/: python-publish.yml
begentle/: __init__.py
doc/begentle/: index.html
tests/: test_begentle.py
