[tool.poetry]
name = "begentle"
version = "0.1.1"
description = "A module for filtering text with profanity using Google's Perspective API."
authors = ["Rahul Wavare <rahulrakida@gmail.com>"]
license = "MIT"
readme = "README.rst"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9"
]
[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "^2.18.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2" # Tests
pdoc3 = "^0.10.0" # Build docs


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
